--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box">
+    <div class="photo-holder">
+
+    </div>
+    <div class="box">
         
     </div>
     <script src="script.js"></script>
