--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="photo-holder">
-        <img src="Pic.png" alt="">
-    </div>
     <div class="box">
         
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
